--- a/final.ipynb
+++ b/final.ipynb
@@ -902,7 +902,7 @@
     "<div class=\"alert alert-block alert-info\">\n",
     "\n",
     "#### Takeaway\n",
-    "* WebDev 2.0's highest endpoint occurences is 'javascript i introduction', with over 7,000 hits. It stayed consistent with over 140 hits across for 24 cohorts straight. \n",
+    "* WebDev 2.0's highest endpoint occurrences is 'javascript i introduction', with over 7,000 hits. It stayed consistent with over 140 hits across for 24 cohorts straight. \n",
     "\n",
     "</div>"
    ]
@@ -1071,7 +1071,7 @@
     "<div class=\"alert alert-block alert-info\">\n",
     "    \n",
     "#### Takeaway\n",
-    "* Data Science 3.0's highest endpoint occurences is classification overview with over 1,700 hits, however, it may not be the most consistent in that it drops off in first and last cohort. The 'sql/mysql-overview' maintained over a 100 hits for four straight cohorts. \n",
+    "* Data Science 3.0's highest endpoint occurrences is 'classification overview' with over 1,700 hits, however, it may not be the most consistent in that it drops off in first and last cohort. The 'sql/mysql-overview' maintained over a 100 hits for four straight cohorts.\n",
     "\n",
     "</div>"
    ]
@@ -1084,9 +1084,9 @@
     "<div class=\"alert alert-block alert-warning\">\n",
     "\n",
     "### Summarize\n",
-    "* WebDev 1.0's highest endpoint occurences is 'javascript i introduction', with 232 hits. The cohort's consistency never changed between lessons so we selected 'javascript i introduction' as most consistent.\n",
-    "* WebDev 2.0's highest endpoint occurences is 'javascript i introduction', with over 7,000 hits. It stayed consistent with over 140 hits across for 24 cohorts straight.\n",
-    "* Data Science 3.0's highest endpoint occurences is classification overview with over 1,700 hits, however, it may not be the most consistent in that it drops off in first and last cohort. The 'sql/mysql-overview' maintained over a 100 hits for four straight cohorts.\n",
+    "* WebDev 1.0's highest endpoint occurrences is 'javascript i introduction', with 232 hits. The cohort's consistency never changed between lessons so we selected 'javascript i introduction' as most consistent.\n",
+    "* WebDev 2.0's highest endpoint occurrences is 'javascript i introduction', with over 7,000 hits. It stayed consistent with over 140 hits across for 24 cohorts straight.\n",
+    "* Data Science 3.0's highest endpoint occurrences is classification overview with over 1,700 hits, however, it may not be the most consistent in that it drops off in first and last cohort. The 'sql/mysql-overview' maintained over a 100 hits for four straight cohorts.\n",
     "\n",
     "</div>"
    ]
@@ -1165,7 +1165,7 @@
     "<div class=\"alert alert-block alert-info\">\n",
     "\n",
     "#### Takeaway\n",
-    "* For WebDev 1.0 cohort 1.0 had 73 occurences for 'javascript-i intro' while 10 other cohorts had between 0 and 14. \n",
+    "* For WebDev 1.0 cohort 1.0 had 73 occurrences for 'javascript-i intro' while 10 other cohorts had between 0 and 14. \n",
     "\n",
     "</div>"
    ]
@@ -1254,7 +1254,7 @@
     "<div class=\"alert alert-block alert-info\">\n",
     "\n",
     "#### Takeaway\n",
-    "* For WebDev 2.0 cohort 135.0 had 505 occurences for 'javascript-i intro' while 18 other cohorts had between 0 and 300. \n",
+    "* For WebDev 2.0 cohort 135.0 had 505 occurrences for 'javascript-i intro' while 18 other cohorts had between 0 and 300. \n",
     "\n",
     "</div>"
    ]
@@ -1317,7 +1317,7 @@
     "<div class=\"alert alert-block alert-info\">\n",
     "\n",
     "#### Takeaway\n",
-    "* For Data Science 3.0 cohort 59.0 had 1109 occurences for 'classification-overview' while the 4 other cohorts had between 0 and 445. \n",
+    "* For Data Science 3.0 cohort 59.0 had 1109 occurrences for 'classification-overview' while the 4 other cohorts had between 0 and 445. \n",
     "\n",
     "</div>"
    ]
@@ -1330,9 +1330,9 @@
     "<div class=\"alert alert-block alert-warning\">\n",
     "\n",
     "### Summarize\n",
-    "* For WebDev 1.0 cohort 1.0 had 73 occurences for 'javascript-i intro' while 10 other cohorts had between 0 and 14.\n",
-    "* For WebDev 2.0 cohort 135.0 had 505 occurences for 'javascript-i intro' while 18 other cohorts had between 0 and 300. \n",
-    "* For Data Science 3.0 cohort 59.0 had 1109 occurences for 'classification-overview' while the 4 other cohorts had between 0 and 445. \n",
+    "* For WebDev 1.0 cohort 1.0 had 73 occurrences for 'javascript-i intro' while 10 other cohorts had between 0 and 14.\n",
+    "* For WebDev 2.0 cohort 135.0 had 505 occurrences for 'javascript-i intro' while 18 other cohorts had between 0 and 300. \n",
+    "* For Data Science 3.0 cohort 59.0 had 1109 occurrences for 'classification-overview' while the 4 other cohorts had between 0 and 445. \n",
     "\n",
     "</div>"
    ]
