--- a/final.ipynb
+++ b/final.ipynb
@@ -1071,7 +1071,7 @@
     "<div class=\"alert alert-block alert-info\">\n",
     "    \n",
     "#### Takeaway\n",
-    "* Data Science 3.0's highest endpoint occurrences is 'classification overview' with over 1,700 hits, however, it may not be the most consistent in that it drops off in first and last cohort. The 'sql/mysql-overview' maintained over a 100 hits for four straight cohorts.\n",
+    "* Data Science 3.0's highest endpoint occurrences is 'sql-mysql' with about 1,424 hits. However, it is important to note that 'sql-mysql' maintained over 100 hits for 4 out of 5 cohorts, but wasn't the highest frequency. Where as the other two lessons charted only had 3 out of 5 cohorts over 100 but had higher frequencies.\n",
     "\n",
     "</div>"
    ]
@@ -1084,9 +1084,9 @@
     "<div class=\"alert alert-block alert-warning\">\n",
     "\n",
     "### Summarize\n",
-    "* WebDev 1.0's highest endpoint occurrences is 'javascript i introduction', with 232 hits. The cohort's consistency never changed between lessons so we selected 'javascript i introduction' as most consistent.\n",
-    "* WebDev 2.0's highest endpoint occurrences is 'javascript i introduction', with over 7,000 hits. It stayed consistent with over 140 hits across for 24 cohorts straight.\n",
-    "* Data Science 3.0's highest endpoint occurrences is classification overview with over 1,700 hits, however, it may not be the most consistent in that it drops off in first and last cohort. The 'sql/mysql-overview' maintained over a 100 hits for four straight cohorts.\n",
+    "* WebDev 1.0's highest endpoint occurrences and most consistent is 'javascript i introduction', with 232 hits. The cohort's consistency never changed between lessons so we selected 'javascript i introduction' as most consistent.\n",
+    "* WebDev 2.0's highest endpoint occurrences and most consistent is 'javascript i introduction', with over 7,000 hits. It stayed consistent with over 140 hits across for 24 cohorts straight.\n",
+    "* Data Science 3.0's most consistent occurrences is 'sql-mysql' with about 1,424 hits. However, it is important to note that 'sql-mysql' maintained over 100 hits for 4 out of 5 cohorts, but wasn't the highest frequency. Where as the other two lessons charted only had 3 out of 5 cohorts over 100 but had higher frequencies.\n",
     "\n",
     "</div>"
    ]
