--- a/final.ipynb
+++ b/final.ipynb
@@ -375,6 +375,7 @@
     }
    ],
    "source": [
+    "# get prepared df\n",
     "w.prepare_df()"
    ]
   },
@@ -419,6 +420,7 @@
     }
    ],
    "source": [
+    "# get info\n",
     "df.info()"
    ]
   },
@@ -510,6 +512,7 @@
     }
    ],
    "source": [
+    "# get descriptions\n",
     "df.describe().T"
    ]
   },
@@ -1381,7 +1384,7 @@
     "<div class=\"alert alert-block alert-warning\">\n",
     "\n",
     "# Summarize\n",
-    "> Yes there are 139 students who were active who did not access the curriculum, over 31 cohorts and vary from years 2016, 2017, 2014, 2015, 2018, 2019, 2020.\n",
+    "* Yes there are 139 students who were active who did not access the curriculum, over 31 cohorts and vary from years 2016, 2017, 2014, 2015, 2018, 2019, 2020.\n",
     "    \n",
     "Students who did not access the curriculum \n",
     "* 81 web development 1.0 \n",
@@ -1532,45 +1535,26 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42544a4f-4808-4390-83e1-7e986e551d88",
-   "metadata": {},
-   "source": [
-    "## Exploration Summary\n",
-    "*\n",
-    "*\n",
-    "*\n",
-    "*"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "fc915aa3-d11b-400a-ac75-af04c64c8439",
    "metadata": {},
    "source": [
-    "# Conclusions\n",
-    "*\n",
-    "*\n",
-    "*\n",
-    "*"
+    "# Explore Summary & Conclusion\n",
+    "* Which lesson appears to attract the most traffic consistently across cohorts (per program)?\n",
+    "\n",
+    "The most occurring and consistent lesson for WebDev 1.0 is 'javascript-i-introduction', with 232 hits. For WebDev 2.0, the most occuring and consistent lesson is also 'javascript-i-introduction', with over 7,000 hits across cohorts. For Data Science 3.0, the most consistent lesson is 'classification-overview', with over 1,400 hits across cohorts.\n",
+    "\n",
+    "* Is there a cohort that referred to a lesson significantly more than other cohorts seemed to gloss over?\n",
+    "\n",
+    "WebDev 1.0 cohort 1.0 and 10 other cohorts had 0-14 occurrences for 'javascript-i intro' lesson. WebDev 2.0 cohort 135.0 and 18 other cohorts had 0-300 occurrences. Data Science 3.0 cohort 59 had 1109 occurrences for 'classification-overview' lesson while 4 other cohorts had 0-445.\n",
+    "\n",
+    "* Are there students who, when active, hardly access the curriculum? If so, what information do you have about these students?\n",
+    "\n",
+    "A total of 139 active students across 31 cohorts from years 2014 to 2020 did not access the curriculum. Specifically, 81 students were from web development 1.0, 54 from web development 2.0, and 4 from data science.\n",
+    "\n",
+    "* What topics are grads continuing to reference after graduation and into their jobs (for each program)? Which lessons are least accessed?\n",
+    "\n",
+    "In Web Development 1.0, HTML-css was the most common lesson while Fundamentals was the least common. For Web Development 2.0, Spring was the most common lesson while Databases was the least common. In Data Science, Classification was the most common lesson while Storytelling was the least common."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "471e1f0a-d7af-4c74-8257-7af3baf5147d",
-   "metadata": {},
-   "source": [
-    "# Recommendations\n",
-    "*\n",
-    "*"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "191b0d97-7dd9-45e7-a6b8-30f866931c48",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
