add docstrings and comments

--- a/final.ipynb
+++ b/final.ipynb
@@ -1366,6 +1366,7 @@
     }
    ],
    "source": [
+    "# Visualization of users who only accessed the curriculum outside of their cohort\n",
     "stu_nac_df = e.q3(df)\n",
     "e.plot_stacked_bar(\n",
     "    stu_nac_df,\n",
@@ -1417,12 +1418,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# creating seperate dfs for only students accessing outside of their cohort\n",
     "web_dev, web_dev2, ds = e.saoc_df(df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 28,
    "id": "83ee22a3",
    "metadata": {},
    "outputs": [
@@ -1438,6 +1440,7 @@
     }
    ],
    "source": [
+    "# Visualization of most & least common lessons for web dev 1\n",
     "mc, lc  = e.webdev1_ml(web_dev)\n",
     "\n",
     "e.webdev_viz(mc, lc)"
@@ -1453,7 +1456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 29,
    "id": "4261a752",
    "metadata": {},
    "outputs": [
@@ -1469,6 +1472,7 @@
     }
    ],
    "source": [
+    "# Visualization of most & least common lessons for web dev 2.0\n",
     "mc2, lc2 = e.webdev2_ml(web_dev2)\n",
     "e.webdev2_viz(mc2, lc2)"
    ]
@@ -1483,7 +1487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 30,
    "id": "c2d7f531",
    "metadata": {},
    "outputs": [
@@ -1499,6 +1503,7 @@
     }
    ],
    "source": [
+    "# Visualization of most & least common lessons for data science\n",
     "mc3, lc3 = e.ds_ml(ds)\n",
     "e.ds_viz(mc3, lc3)"
    ]
