--- a/final.ipynb
+++ b/final.ipynb
@@ -109,13 +109,16 @@
    "id": "f8226302-b935-4b90-8e98-52aefd0c20a8",
    "metadata": {},
    "source": [
-    "| Feature   | Definition                                                                                                                     |\n",
-    "|-----------|--------------------------------------------------------------------------------------------------------------------------------|\n",
-    "| date      | the date and time a user accessed Codeup curriculum internet page                                                              |\n",
-    "| endpoint  | the page the user landed on in the curriculum                                                                                  |\n",
-    "| user_id   | the number assigned to a user by CodeUp (i.e. student, staff)                                                                  |\n",
-    "| cohort_id | the number assigned to a cohort in a program by CodeUp                                                                         |\n",
-    "| source_ip | Internet Protocol address, is a numerical label assigned to each device connected to a computer network that uses the Internet |"
+    "| Feature     | Definition                                                                                                                     |\n",
+    "|-------------|--------------------------------------------------------------------------------------------------------------------------------|\n",
+    "| date        | the date and time a user accessed Codeup curriculum internet page                                                              |\n",
+    "| endpoint    | the page the user landed on in the curriculum                                                                                  |\n",
+    "| user_id     | the number assigned to a user by CodeUp (i.e. student, staff)                                                                  |\n",
+    "| cohort_id   | the number assigned to a cohort in a program by CodeUp                                                                         |\n",
+    "| source_ip   | internet protocol address, is a numerical label assigned to each device connected to a computer network that uses the Internet |\n",
+    "| start_date  | start_date of cohort                                                                                                           |\n",
+    "| end_date    | end_date of cohort                                                                                                             |\n",
+    "| cohort_name | the name of the cohort spelled                                                                                                 |"
    ]
   },
   {
@@ -869,12 +872,14 @@
     "<div class=\"alert alert-block alert-warning\">\n",
     "\n",
     "# Summarize\n",
-    "* Yes there are 139 students who were active who did not access the curriculum, over 31 cohorts and vary from years 2016, 2017, 2014, 2015, 2018, 2019, 2020.\n",
+    "* Yes there are 139 out of 929 students who were active who did not access the curriculum, over 31 cohorts and vary from years 2016, 2017, 2014, 2015, 2018, 2019, 2020.\n",
     "    \n",
-    "Students who did not access the curriculum \n",
-    "* 81 web development 1.0 \n",
-    "* 54 web development 2.0\n",
-    "* 4 data science \n",
+    "- Number of Students who did not access the curriculum:\n",
+    "\t- Web development 1.0: 81 students\n",
+    "\t\t\n",
+    "\t- Web development 2.0: 54 students\n",
+    "\t\t\t\n",
+    "\t- Data science: 4 students\n",
     "\n",
     "</div>"
    ]
